<resources>
    <string name="app_name">Entregable1_FAS</string>
    <string name="fechaInicio">Fecha inicio:</string>
    <string name="fechaFin">Fecha fin:</string>
    <string name="fechaSalida">Fecha salida:</string>
    <string name="fechaLlegada">Fecha llegada:</string>
    <string name="precio">Precio:</string>
    <string name="precioMinimo">Precio Minimo:</string>
    <string name="precioMaximo">Precio Máximo:</string>
    <string name="lugarsalida">Lugar de Salida:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="filtrado">Filtrado</string>
    <string name="columnas">Columnas</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="login_email_et_hint">Correo electronico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="loggin_button_mail_text">Acceder</string>
    <string name="loggin_button_signup_text">Registrar usuario</string>
    <string name="loggin_button_google">Acceso con Google</string>
    <string name="loggin_button_register_text">Pulsa aqui para registarte</string>
    <string name="Login_mail_error_1">El correo electronico no puede estar vacio</string>
    <string name="Login_mail_error_2">La contraseña no puede estar vacia</string>
    <string name="login_email_access">Se ha producido un error</string>
    <string name="login_verified_email_error">Aun no has validado tu cuenta, ¿Quieres que te enviemos un correo de notificacion?</string>
    <string name="login_verified_email_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificacion a tu direccion</string>
    <string name="login_verified_mail_no_sent">No se ha podido enviar un correo a tu cuenta</string>
    <string name="login_verified_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debe descargarte Google Play Services</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_uri">market://details?id=com.google.adroid.gms</string>
    <string name="market_download_uri">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_web_client">74286359704-l50e6q752qbfvvi6vchkhiet5uqgm4jf.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introduce de nuevo la contraseña</string>
    <string name="signup_error_user">La direccion de correo no es válida</string>
    <string name="signup_error_pass">La contraseña no es válida</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_created">Usuario registrado correctamente</string>
    <string name="signup_created_error">Se ha producido un error al registrar</string>
    <string name="trip_lugarSalida_form_hint">Lugar de salida</string>
    <string name="trip_lugarDestino_form_hint">Lugar de destino</string>
    <string name="trips_button_form_alta">Registrar Viaje</string>
    <string name="trip_precio_form_hint">Precio €</string>
    <string name="trip_descripcion_form_hint">Descripción</string>
    <string name="trip_field_empthy">Complete el campo vacio</string>
    <string name="trip_created">Viaje creado correctamente</string>
    <string name="trip_date_start_hint">Fecha Salida</string>
    <string name="trip_date_end_hint">Fecha Llegada</string>
    <string name="take_picture">Obtener imagen</string>
    <string name="take_picture_rationale">Necesitamos acceder a tu camara</string>
    <string name="take_picture_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No es posible usar esa función sin la camara</string>
    <string name="storage_not_granted">No se se puede almacenar la foto</string>
    <string name="trip_without_take_picture">Obtenga la imagen antes de registrar</string>
    <string name="open_weather_map_api_key">1b1631c182bb7065871e1aa457f3c3cb</string>
    <string name="location_needed">Necesitamos tu localizacion para esta funcionalidad</string>
    <string name="location_rationale_ok">Permitir</string>
    <string name="location_cancel">Este permiso es importante para la aplicación</string>
    <string name="open_weather_map_api_unit">metric</string>
    <string name="open_weather_map_api_language">es</string>
</resources>
