<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<ProgressBar
    android:id="@+id/progressBarLoading"
    style="?android:attr/progressBarStyle"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center" />


<ImageView
    android:id="@+id/imageView4"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:contentDescription="@string/app_name"
    app:srcCompat="@drawable/nice_trip_logo_r" />


<ScrollView
    android:id="@id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_et_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@id/login_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pass_et_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/login_button_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_button"
            android:drawableStart="@drawable/common_full_open_on_phone"
            android:text="@string/loggin_button_mail_text"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@id/login_button_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/common_full_open_on_phone"
            android:text="@string/loggin_button_google"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@id/login_button_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:drawableStart="@drawable/common_full_open_on_phone"
            android:text="@string/loggin_button_register_text"
            android:textAllCaps="true"
            android:textColor="@color/blue_app" />
    </LinearLayout>
</ScrollView>

</LinearLayout>

