<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TripRegistrarActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/nice_trip_logo_r" />


    <ScrollView
        android:id="@id/trips_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@id/values_trips_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_lugarSalida_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@id/trip_lugarSalida_form_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_lugarSalida_form_hint"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_lugarDestino_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@id/trip_lugarDestino_form_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_lugarDestino_form_hint"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_precio_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@id/trip_precio_form_et"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/trip_precio_form_hint"
                    android:inputType="number"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_descripcion_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@id/trip_descripcion_form_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_descripcion_form_hint"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_date_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trip_date_start_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_date_start_hint" />

                <ImageView
                    android:id="@+id/calendarioInicio"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:onClick="fechaRegistro"
                    app:srcCompat="@drawable/ic_event_24dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@id/trip_date_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trip_date_end_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_date_end_hint" />

                <ImageView
                    android:id="@+id/calendarioFin"
                    android:layout_width="match_parent"
                    android:layout_height="45sp"
                    android:onClick="fechaRegistro"
                    app:srcCompat="@drawable/ic_event_24dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/take_picture_imagen"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:src="@drawable/ic_launcher_background">

            </ImageView>

            <Button
                android:id="@id/trip_button_form_take_picture"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/take_picture"
                android:textAllCaps="true"
                android:textColor="@color/blue_app" />

            <Button
                android:id="@id/trip_button_form_create"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/trips_button_form_alta"
                android:textAllCaps="true"
                android:textColor="@color/blue_app" />


                android:src="@drawable/ic_insert_photo_black_24dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

