<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignupActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_et_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@id/login_pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_et_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/login_pass_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@id/login_pass_confirmation_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_confirmation_et_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/login_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_app"
        android:drawableStart="@drawable/common_full_open_on_phone"
        android:text="@string/loggin_button_signup_text"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>