<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textviewInfoFechaInicio"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fechaSalida"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewFechaInicio"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="Fecha"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/calendarioInicio"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:layout_weight="1"
            android:onClick="fecha"
            app:srcCompat="@drawable/ic_event_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textviewInfoFechaFin"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fechaLlegada"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewFechaFin"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="Fecha"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/calendarioFin"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:layout_weight="1"
            android:onClick="fecha"
            app:srcCompat="@drawable/ic_event_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewInfoPrecioMin"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/precioMinimo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPrecioMin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="€"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewInfoPrecioMax"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/precioMaximo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPrecioMax"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="€"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_width="123dp"
            android:layout_height="80dp"
            android:onClick="precio"
            android:text="Filtrar" />
    </LinearLayout>


</LinearLayout>